--- a/week1/cv.html
+++ b/week1/cv.html
@@ -15,7 +15,7 @@
     <div class="resume">
 
         <section class="profile">
-            <img src="/Module1/Week1/IMG-0385.jpg" alt="">
+            <img src="IMG-0385.jpg" alt="">
             <div class="daitels">
 
                 <h2>Osamah Qassem</h2>
